--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/fantasyui-com/decrement/issues"
   },
-  "homepage": "https://github.com/fantasyui-com/decrement#readme"
+  "homepage": "https://github.com/fantasyui-com/decrement#readme",
+  "dependencies": {
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "oneof": "^1.0.1",
+    "shelljs": "^0.7.7",
+    "sprintf-js": "^1.1.0"
+  }
 }
